Make Spring WS work with both Axiom 1.2 and Axiom 1.3/1.4.
See #1264.