@@ -88,7 +88,10 @@
 		<activemq.version>4.1.2</activemq.version>
 		<aspectj.version>1.9.6</aspectj.version>
 		<assertj.version>3.9.0</assertj.version>
-		<axiom.version>1.2.20</axiom.version>
+		<axiom-1.2.version>1.2.20</axiom-1.2.version>
+		<axiom-1.3.version>1.3.0</axiom-1.3.version>
+		<axiom-1.4.version>1.4.0</axiom-1.4.version>
+		<axiom.version>${axiom-1.4.version}</axiom.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
 		<commons-io.version>2.5</commons-io.version>
 		<dom4j.version>1.6.1</dom4j.version>
@@ -109,8 +112,8 @@
 		<slf4j.version>1.7.25</slf4j.version>
 		<smack.version>4.2.1</smack.version>
 		<soap-api.version>1.4.0</soap-api.version>
-		<spring.version>5.3.17</spring.version>
-		<spring-security.version>5.5.5</spring-security.version>
+		<spring.version>5.3.23</spring.version>
+		<spring-security.version>5.5.8</spring-security.version>
 		<stax.version>1.8.3</stax.version>
 		<sun-mail.version>1.6.0</sun-mail.version>
 		<woodstox.version>4.2.0</woodstox.version>
@@ -229,10 +232,27 @@
 
 	<profiles>
 		<profile>
+			<id>axiom-1.3</id>
+			<properties>
+				<axiom.version>${axiom-1.3.version}</axiom.version>
+			</properties>
+		</profile>
+		<profile>
 			<id>spring-buildsnapshot</id>
 			<properties>
-				<spring.version>5.3.18-SNAPSHOT</spring.version>
-				<spring-security.version>5.5.6-SNAPSHOT</spring-security.version>
+				<spring.version>5.3.24-SNAPSHOT</spring.version>
+			</properties>
+		</profile>
+		<profile>
+			<id>spring-security-5.6</id>
+			<properties>
+				<spring-security.version>5.6.8</spring-security.version>
+			</properties>
+		</profile>
+		<profile>
+			<id>spring-security-5.7</id>
+			<properties>
+				<spring-security.version>5.7.4</spring-security.version>
 			</properties>
 		</profile>
 
@@ -286,6 +306,17 @@
 			</build>
 		</profile>
 
+		<profile>
+			<id>testing</id>
+
+			<modules>
+				<module>spring-ws-core</module>
+				<module>spring-ws-security</module>
+				<module>spring-ws-support</module>
+				<module>spring-xml</module>
+				<module>spring-ws-tests</module>
+			</modules>
+		</profile>
 
 		<profile>
 			<id>distribute</id>
@@ -699,6 +730,17 @@
 							<useSystemClassLoader>false</useSystemClassLoader>
 							<argLine>
 								--illegal-access=permit
+								--add-opens java.base/java.lang=ALL-UNNAMED
+								--add-opens java.base/java.lang=ALL-UNNAMED
+								--add-opens java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
+								--add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
+								--add-opens java.xml.crypto/com.sun.org.apache.xml.internal.security=ALL-UNNAMED
+								--add-opens java.xml.crypto/org.jcp.xml.dsig.internal.dom=ALL-UNNAMED
+								--add-exports java.base/java.lang=ALL-UNNAMED
+								--add-exports java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
+								--add-exports java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
+								--add-exports java.xml.crypto/com.sun.org.apache.xml.internal.security=ALL-UNNAMED
+								--add-exports java.xml.crypto/org.jcp.xml.dsig.internal.dom=ALL-UNNAMED
 							</argLine>
 						</configuration>
 					</plugin>
@@ -745,10 +787,6 @@
 					<version>${saaj-impl.version}</version>
 					<exclusions>
 						<exclusion>
-							<groupId>javax.xml.soap</groupId>
-							<artifactId>javax.xml.soap-api</artifactId>
-						</exclusion>
-						<exclusion>
 							<groupId>jakarta.xml.soap</groupId>
 							<artifactId>jakarta.xml.soap-api</artifactId>
 						</exclusion>
@@ -787,6 +825,12 @@
 					<groupId>jakarta.xml.bind</groupId>
 					<artifactId>jakarta.xml.bind-api</artifactId>
 					<version>2.3.2</version>
+					<exclusions>
+						<exclusion>
+							<groupId>jakarta.activation</groupId>
+							<artifactId>jakarta.activation-api</artifactId>
+						</exclusion>
+					</exclusions>
 				</dependency>
 
 			</dependencies>
